# learn_pydantic_v2

./: README.md  main.py  pyproject.toml  uv_sync.sh
fastapi-learning/: .gitignore  PROJECT_SUMMARY.md  QUICK_START.md  README.md  START_HERE.md  pyproject.toml
fastapi-learning/app/: main.py
fastapi-learning/app/api/v1/: api.py  deps.py
fastapi-learning/app/api/v1/endpoints/: auth.py  users.py
fastapi-learning/app/core/: config.py  database.py  security.py
fastapi-learning/app/crud/: base.py  user.py
fastapi-learning/app/models/: user.py
fastapi-learning/app/schemas/: token.py  user.py
fastapi-learning/docs/: 00_项目概览.md  01_Models层_SQLAlchemy.md  02_Schemas层_Pydantic.md  03_CRUD层_业务逻辑.md  04_API层_FastAPI路由.md  05_认证授权_JWT.md  INDEX.md  __small__tips.md  学习总结.md
fastapi-learning/scripts/: create_user.py  run.py
learning/: 00_START_HERE.md  01_basics.py  02_field_constraints.py  03_validators.py  04_nested_models.py  05_model_config.py  06_aliases_serialization.py  07_practical.py  08_common_mistakes.py  INDEX.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README_LEARNING.md
learning/toml/: config.toml  demo.py
learning/yaml/: demo-2.py  demo.py  ezample.py
learning/yaml/config/: app.yaml
